2008-08-07  Al Riddoch  <alriddoch@googlemail.com>

	* Mercator/Segment.cpp: Fix applyMod() so it correctly calculates
	  mod offset in segments other than 0,0.

	* tests/testTerrainMod.cpp: Re-order setup of modified terrain
	  in such an order that the modifiers actually have an effect.

2008-08-04  Al Riddoch  <alriddoch@googlemail.com>

	* Mercator/Terrain.cpp: Fix one of the more obvious gratuitous
	  ineffeciencies. Use I_ROUND rather than integer casting.
	  Add some debug code for debugging issues with modifiers.

2008-07-02  Erik Hjortsberg <erik.hjortsberg@iteam.se>

	* Mercator/Segment.cpp: Delete surfaces at shut down, else we'll have
	  a memory leak.

2008-07-01  Alexey Torkhov  <atorkhov@gmail.com>

	* Mercator/RandCache.h, Mercator/AreaShader.h,
	  Mercator/AreaShader.cpp: Add standard headers required by
	  versions of GCC 4.3 or later.

2007-11-25  Al Riddoch  <alriddoch@googlemail.com>

	* mercator.spec.in: Break out the static libraries into their own
	  package. Add a new sub package for the documentation.

	* Doxyfile: Do an automated update of the doxygen configuration.

2007-11-05  Al Riddoch  <alriddoch@googlemail.com>

	* acinclude.m4: Update to the latest pkgconfig check macros.

	* configure.ac: Use the latest pkgconfig macros, provide more useful
	  error messages when libraries can't be found. Increment the version
	  number for future release.

	* NEWS: Add news to test distribution of latest version.

	* AUTHORS: Update maintainers email address.

	* mercator.spec.in: Disable dependencies, and use multiple CPU cores
	  when building the rpm.

2007-11-05  Al Riddoch  <alriddoch@zepler.org>

	* tests/testForest.cpp: Add some more straightforward coverage.

2007-09-22  Al Riddoch  <alriddoch@zepler.org>

	* Doxyfile: Update to a more recent version.

2007-09-20  Al Riddoch  <alriddoch@zepler.org>

	* Mercator/Area.cpp, Mercator/Area.h, Mercator/AreaShader.cpp,
	  Mercator/AreaShader.h, Mercator/BasePoint.h, Mercator/RandCache.h: